When rendering an image sequence with stereoscopy and overwrite disabled, images still get overwritten. #117674

Closed
opened 2024-01-30 19:18:13 +01:00 by Rangarig Rex · 3 comments

System Information
Operating system: Linux-5.15.0-91-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Broken: version: 3.6.0
Worked: 3.5.1
Worked: 3.3.15

Caused by 6b9a500a3a

Short description of error
When stereoscopy and "individual images" is enabled, the overwrite flag seems to have no effect.

Exact steps for others to reproduce the error
Open fresh blender file.
Enable stereoscopy in the Output Properties.
Disable "overwrite"

Render a few frames. (render animation)
Render a few frames again. Notice how the frames are overwritten even though overwrite is disabled.

**System Information** Operating system: Linux-5.15.0-91-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Broken: version: 3.6.0 Worked: 3.5.1 Worked: 3.3.15 Caused by 6b9a500a3a **Short description of error** When stereoscopy and "individual images" is enabled, the overwrite flag seems to have no effect. **Exact steps for others to reproduce the error** Open fresh blender file. Enable stereoscopy in the Output Properties. Disable "overwrite" Render a few frames. (render animation) Render a few frames again. Notice how the frames are overwritten even though overwrite is disabled.
Rangarig Rex added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-30 19:18:14 +01:00
Member

Can confirm, will check

Can confirm, will check
Member

This was caused by 6b9a500a3a.

Got a fix, will post a PR shortly.

This was caused by 6b9a500a3afc. Got a fix, will post a PR shortly.
Philipp Oeser self-assigned this 2024-01-31 15:49:15 +01:00
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-01-31 15:53:44 +01:00
Member

Fix is up, see !117696

Fix is up, see !117696
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-01 09:52:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117674
No description provided.