Fix #117674: stereoscopy rendering with overwrite disabled broken

This would still overwrite (even though frames existed).

Mistake in 6b9a500a3a.

char "filepath" was already in use/shadowed, instead use "filepath_view" to
correctly glue path/suffix together (as done already a bit below for the
R_TOUCH case).

Pull Request: #117696